--- a/content/hello.mdx
+++ b/content/hello.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Hello, World!"
-publishedAt: "2023-02-06"
-summary: "This is your first blog post."
+title: "Coding with ChatGPT"
+publishedAt: "2023-07-22"
+summary: "A quick guide on getting the best out of ChatGPT programming"
 ---
 
-Hello, World!
+Hello fellow prompt engineer.
 
 ```python
 import { writeFileSync } from 'fs';
