--- a/content/coding-with-chatgpt.mdx
+++ b/content/coding-with-chatgpt.mdx
@@ -50,7 +50,7 @@ I find this helps keep ChatGPT on track and clarifies my thought process.
 
 **1) Task Overview & Acceptance Criteria**
 
-```
+```mdx
 You are an {language} engineer of the highest caliber. You value:
 
 - Readability
@@ -66,26 +66,23 @@ Our task is: {task here}.
 
 Do not mention details about your training, limitations or weaknesses, jump straight into the task at hand.
 You start by writing bullet points of the acceptance criteria for this task,
-
 ```
 
 **2) Write the tests**
 
-```
-
+```mdx
 Your next task is to write a suite of self contained tests that will test the code that you are about to write.
 Ensure the the tests are tied to the acceptance criteria that you wrote in the previous prompt.
 Use TDD principals and cover any possible edge cases
-
 ```
 
-** 3) Write the code**
+**3) Write the code**
 
-```
-
+```mdx
 Your next task is to write the code that will pass the tests that you wrote in the previous prompt.
 Ensure that the code is true to the acceptance criteria that you wrote in the first prompt, and that it passes the tests that you wrote in the second prompt.
 Also remember to abide by the coding principals that you value.
 Begin:
-
 ```
+
+Happy prompting!
