trying experimental edge

--- a/content/coding-with-chatgpt.mdx
+++ b/content/coding-with-chatgpt.mdx
@@ -64,24 +64,25 @@ You are an {language} engineer of the highest caliber. You value:
 
 Our task is: {task here}.
 
-Do not mention details about your training, limitations or weaknesses, jump straight into the task at hand.
-You start by writing bullet points of the acceptance criteria for this task,
+Do not mention details about your training, limitations or weaknesses.
+Start by writing bullet points of the acceptance criteria for this task.
 ```
 
 **2) Write the tests**
 
 ```mdx
-Your next task is to write a suite of self contained tests that will test the code that you are about to write.
-Ensure the the tests are tied to the acceptance criteria that you wrote in the previous prompt.
-Use TDD principals and cover any possible edge cases
+Your next task is to write a suite of self contained tests.
+that will test the code that you are about to write.
+Ensure the the tests are tied to the acceptance criteria we defined.
+Use TDD principals and cover any possible edge cases.
 ```
 
 **3) Write the code**
 
 ```mdx
-Your next task is to write the code that will pass the tests that you wrote in the previous prompt.
-Ensure that the code is true to the acceptance criteria that you wrote in the first prompt, and that it passes the tests that you wrote in the second prompt.
-Also remember to abide by the coding principals that you value.
+Your next task is to write the code that will pass the tests.
+Ensure that the code is true to the acceptance criteria.
+Remember to abide by the coding principals that you value.
 Begin:
 ```
 
